--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Qwigley&family=Schoolbell&family=Short+Stack&family=Twinkle+Star&family=Uncial+Antiqua&family=Vibes&display=swap" rel="stylesheet" />
+    <link href="./src/Index.css />" rel="stylesheet" />
+    <title>
+      Inkoraa
+    </title>
   </head>
   <body>
     <div id="root"></div>
